kubernetes/apps/base/authentik/reference-grants.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: uptime
  namespace: authentik
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: uptime
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
